More tweaks, formatting, marks support

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ian Kirkland | Writer</title>
+    <script
+      src="https://kit.fontawesome.com/ad4ec38046.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
